Closed
Bug 68296
Opened 24 years ago
Closed 23 years ago
Cyrus IMAP: Can't unsubscribe from 2,3, ... level IMAP folder
Categories
(SeaMonkey :: MailNews: Message Display, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: avm, Assigned: cavin)
Details
(Keywords: imap-interop)
Attachments
(2 files)
3.35 KB,
patch
|
Details | Diff | Splinter Review | |
3.04 KB,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1.Create IMAP subfolder(For example subfoilder of INBOX)
2.Subcribe to it
3.Unsubscribe from it
4.Open "Subscribe" window and note, that you is still subscribed
on this folder.
Reproduced under Intel Solaris 2.7
Reprodusible: Always
Build: Mozilla/5.0 (X11; U; SunOS 5.7 i86pc; en-US; m18) Gecko/20010123
Netscape6/6.0
IMAP server: Cyrus IMAP4 v2.0.9
Reporter | ||
Comment 1•24 years ago
|
||
Add CC
Comment 2•24 years ago
|
||
what type of imap server?
Comment 3•24 years ago
|
||
IMAP server: Cyrus IMAP4 v2.0.9
I should read more carefully.
Comment 4•24 years ago
|
||
is this on the Netscape OEM branch?
if so, try a trunk build. a lot of subscribe improvements have happened since
that branch.
Updated•24 years ago
|
Keywords: interop
Summary: Can't unsubscribe from 2,3, ... level IMAP folder → Cyrus IMAP: Can't unsubscribe from 2,3, ... level IMAP folder
Comment 5•24 years ago
|
||
It works on Mozilla build 2001040604 for PC win2000.
Comment 6•24 years ago
|
||
Tested Netscape6.01A on Sparc Solaris 2.8 and Mozilla build 2001040904 on PC
win2000. I tried to create IMAP subfolder failed. First of all, I could not
create any subfolder under INBOX, the INBOX has been greyed out. The second
test was creating any subfolder under IMAP (except INBOX) failed with error
message "The current command did not succeed. The mail server responded:
CREATE failed: Can't create mailbox node /home/sl116442/Trash: File exists".
But, I tried to have subfolder name for Trash is "Trash1" which was a different
name. The IMAP server is single.eng.sun.com.
Reporter | ||
Comment 7•24 years ago
|
||
Not all IMAP servers allow creation of subfolders.
You may use Cyrus IMAP server for test this operation.
This bug is still reproduced for me with Cysrus IMAP v2.0.9
and Mozilla's build 2001040805 under Linux.
Comment 8•24 years ago
|
||
Marking the bug OS category to Linux for now based on Alexei's comments.
OS: Solaris → Linux
Hardware: Sun → PC
Updated•24 years ago
|
Keywords: nsenterprise
Comment 10•24 years ago
|
||
wrong bug. adding nsenterprise+
Comment 11•24 years ago
|
||
Yes. I can reproduce this problem on the 08-02-06-trunk build.
Assignee | ||
Comment 13•24 years ago
|
||
Assignee | ||
Comment 14•24 years ago
|
||
Basically, in nsImapProtocol::Subscribe() and nsImapProtocol::Unsubscribe() we
need to restore the folder pathname back to original one (ie, the one sent by
the server for the list/lsub response). For example, 'INBOX/subfld' should be
changed/converted to 'INBOX.subfld' before sending it to the Cyrus server,
otherwise the cmd will fail.
bienvenu and sspitzer can you r and sr it? Thanks.
Assignee | ||
Comment 15•24 years ago
|
||
Forgot to cc bienvenu.
Comment 16•23 years ago
|
||
Not sure about this - I'm thinking maybe the caller should not be passing in
folder names with the hierarchical delimiter, but let me think about it a little
bit.
Assignee | ||
Comment 17•23 years ago
|
||
Comment 18•23 years ago
|
||
looks good, Cavin, thanks for working on this - r=bienvenu
Comment 19•23 years ago
|
||
sr=sspitzer
Assignee | ||
Comment 20•23 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 21•23 years ago
|
||
This was checked in with ^Ms in it, which broke some of the ports. timeless
fixed it for you. Check that cygwin is configured correctly.
Assignee | ||
Comment 22•23 years ago
|
||
Sorry about that. This is not the first time that I've checked in stuff and I've
not changed any settings on my development machine so I'm not sure what happened
to it this time. However, I'll investigate the cause.
Comment 23•23 years ago
|
||
Verified on 08-23-08-trunk build.
This is working now on the Cyrus server for unsubscribe functionality.
Can I mark as verified for this bug? But I am wondering to know what the impact
from the previous comments?
Assignee | ||
Comment 24•23 years ago
|
||
Yes Karen, you can mark it as VERIFIED. There was some problem with the code I
checked in but it was fixed by Bradley so it's not a problem anymore.
Comment 25•23 years ago
|
||
Thanks.
Good work, Cavin. Marking as verified then.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: huang → search
You need to log in
before you can comment on or make changes to this bug.
Description
•