Bug #68296: In SubscribeToFolder(), make sure we pass the right folder object to SubscribeFolder(). In PossibleImapMailbox(), set the correct delimiter for unsubscribed folders. r=bienvenu, sr=sspitzer.